# CayleyPerms

./: .gitignore  README.md  README.rst  pyproject.toml  python_package.yml  setup.py  setup_insenc_test.sh  setup_mapplings_test.sh  tox.ini
cayley_permutations/: __init__.py  av.py  cayley.py  simplify_basis.py
check_regular_ins_enc/: __init__.py  check_regular_hori.py
clouds/: __init__.py  finding_spec.py  testing_tracked_algos.py  tracked_algos.py  tracked_searcher.py  tracked_strategies.py  tracked_tilescope.py  tracked_tiling.py
decorated_patterns/: __init__.py  decorated_pattern.py  pattern_finder.py
gridded_cayley_permutations/: __init__.py  factors.py  gridded_cayley_perms.py  minimal_gridded_cperms.py  obstruction_transitivity.py  point_placements.py  row_col_map.py  simplify_obstructions_and_requirements.py  tilings.py  tracked_tilings.py  unplacement.py
mesh_patterns/: __init__.py  bisc.py  mesh_patts.py
playground/: computed_failures_3s.txt  computed_failures_3s_4x1.txt  did_compute_3s_part_2.txt  did_compute_3s_part_5.txt  didnt_compute_3s_part_2.txt  didnt_compute_3s_part_5.txt  failures_3s.txt  failures_3s_4x1.txt  finding_specs.py  long_run.py  sorting_successes.py  specific_class.py  tilings_to_check.py  times.py
specs/: absolutely_all_3s.py  all_non_inenc_basis_classes_3s.txt  all_non_inenc_basis_classes_3s_4x1.txt  analysing_successes.py  finding_specs.py  loading_gfs.py  renaming_specs.py  took_too_long_3s.txt  useful_functions.py  wilf_equivalence.py  wilf_equivalence_classes_3s.txt
successes_and_failures/: actual_failures_3s.txt  actual_failures_3s_4x1.txt  all_bases.py  all_basis_classes_3s.txt  all_basis_classes_3s_4x1.txt  analysing_successes.py  interesting_3s.txt  interesting_3s_4x1.txt  sorting_successes.py  successes_3s.txt  successes_3s_4x1.txt
tests/: setup_insenc_test.sh  test_cayley_perm.py  test_json.py  test_regular_ins_enc_checks.py  test_some_classes.py  test_tilings.py
tilescope/: __init__.py  new_strategy_packs.py  searcher.py  strategy_packs.py
(+5372 files in other folders)
